# RVEmu

./: .gitignore  BUILD  CMakeLists.txt  LICENSE  README.MD  main.cpp
doc/sch/: list-of-implemented-instructions.md
include/: rv_cpu_32i.h  rv_registers_32i.h  rv_typedef.h
include/common/: log_sys.h
src/: CMakeLists.txt  main.cpp  rv_cpu_32i.cpp
src/common/: log_sys.cpp
src/emulator/: BUILD  CMakeLists.txt  emulator.cc  emulator.h
src/logger/: BUILD  CMakeLists.txt  logger.cc  logger.h  logger.inl
src/memory/: CMakeLists.txt
src/processor/: BUILD  CMakeLists.txt  cache.cc  cache.h  core.cc  core.h  cpu.cc  cpu.h  instruction.cc  instruction.h
src/storage/: CMakeLists.txt
